--- a/docker/roboshop_project/web/Dockerfile
+++ b/docker/roboshop_project/web/Dockerfile
@@ -1,6 +1,5 @@
 FROM nginx
 RUN rm -rf /usr/share/nginx/html/*
 RUN curl -o /tmp/web.zip https://roboshop-builds.s3.amazonaws.com/web.zip
-RUN cd /usr/share/nginx/html
-RUN unzip /tmp/web.zip
+ADD /tmp/web.zip /usr/share/nginx/html/
 COPY roboshop.conf /etc/nginx/default.d/roboshop.conf 
