--- a/docker/roboshop_project/web/Dockerfile
+++ b/docker/roboshop_project/web/Dockerfile
@@ -1,6 +1,4 @@
 FROM nginx
 RUN rm -rf /usr/share/nginx/html/*
-ADD https://roboshop-builds.s3.amazonaws.com/web.zip /usr/share/nginx/html/
-RUN apt install unzip -y
-RUN unzip /usr/share/nginx/html/web.zip
+ADD web.zip /usr/share/nginx/html/
 COPY roboshop.conf /etc/nginx/default.d/roboshop.conf
