--- a/docker/roboshop_project/web/Dockerfile
+++ b/docker/roboshop_project/web/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx
 RUN rm -rf /usr/share/nginx/html/*
-ADD web.zip /usr/share/nginx/html/
+ADD web.tar.gz /usr/share/nginx/html/
 COPY roboshop.conf /etc/nginx/default.d/roboshop.conf
